--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -19,3 +19,7 @@ databaseChangeLog:
       file: db/changelog/009.problems.sql
   - include:
       file: db/changelog/010.root_group.sql
+  - include:
+      file: db/changelog/011.dis_problem_enabled.sql
+  - include:
+      file: db/changelog/012.external_dis_problem_ids.sql
