--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -23,3 +23,5 @@ databaseChangeLog:
       file: db/changelog/011.dis_problem_enabled.sql
   - include:
       file: db/changelog/012.external_dis_problem_ids.sql
+  - include:
+      file: db/changelog/013.dis_problem_key_words.sql
