--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -27,3 +27,15 @@ databaseChangeLog:
       file: db/changelog/013.dis_problem_key_words.sql
   - include:
       file: db/changelog/014.users_and_user_problems.sql
+  - include:
+      file: db/changelog/015.IAS_problems.sql
+  - include:
+      file: db/changelog/016.IAS_problem.sql
+  - include:
+      file: db/changelog/017.user_problem_ias_service_and_module.sql
+  - include:
+      file: db/changelog/018.IAS_modules.sql
+  - include:
+      file: db/changelog/019.IAS_services.sql
+  - include:
+      file: db/changelog/020.user_problem_file_name.sql
