--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   db:
     image: postgres:alpine3.19
@@ -11,6 +9,24 @@ services:
       - POSTGRES_PASSWORD=qwerty
     volumes:
       - db-data:/var/lib/postgresql/data
+  llm:
+    image: ollama/ollama
+    volumes:
+      - llm-data:/root/.ollama
+      - ./llama:/llama/
+      - llm-model:/model/
+    entrypoint: sh -c /llama/init.sh
+    ports:
+      - "11434:11434"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
 volumes:
   db-data:
+  llm-data:
+  llm-model:
